<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Register">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_color"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:src="@mipmap/logo_login"
            android:contentDescription="@string/todo" />
    </LinearLayout>
        <TextView
            android:id="@+id/txt_Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_below="@id/linear_layout1"
            android:background="@color/grey_color"
            android:padding="6dp"/>
    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textinput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="#000000"
    android:layout_below="@id/txt_Signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textinput2"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_areacode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:hint="@string/area_code"
                android:inputType="number"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            android:layout_marginLeft="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cellcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:hint="@string/email"
                android:maxLength="10"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/linear_layout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_blockno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/block_no"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/street_name"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_apartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/apartment_unit"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/city"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_below="@id/textinput8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/zip_code"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textinput9"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:text="@string/yes_i_have_read_and_accept"
            android:textSize="15sp"
            android:checked="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condition"
            android:textSize="15sp"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bg_image"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout3"
        android:layout_width="match_parent"
        android:background="@mipmap/bg"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bg_image"
        android:background="@color/btn_back_color"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="20sp"
       android:textAlignment="center"
        android:gravity="center_horizontal" />


</RelativeLayout>

</ScrollView>